src/pages/Warehouses/Warehouses.scss
@use "../../styles/partials/mixins" as *;
@use "../../styles/partials/variables" as *;

.warehouse {
  margin-top: -1rem; //to be tested once nav is put in
  margin: 2rem; //FOR TESTING
  border-radius: 3px;
  box-shadow: 0px 2px 5px 0px #13182c1a;

  &__head {
    padding: 1rem;
    padding-bottom: 1.5rem;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;

    @include tablet {
      padding: 1.5rem;
    }

    @include desktop {
      padding: 2rem;
    }
  }
  &__header {
    @include page-header;
  }

  &__row {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    padding: 16px;
    border-top: 1px solid $secondary-cloud;
    @include tablet {
      padding: 24px;
      display: grid;
      grid-template-columns: repeat(2, 1fr) auto;
      &:hover {
        background-color: rgba(46, 102, 229, 0.07);
      }

      &:nth-of-type(2) {
        border-top: none;
      }
    }
  }
  &__column {
    @include tablet {
      display: grid;
      grid-template-columns: repeat(2, 1fr);
    }
  }
  &__row:nth-of-type(n + 3) &__cell-label {
    @include tablet {
      display: none;
    }
  }
  &__cell {
    padding: 8px 0;
    @include tablet {
      padding: 0;
    }
    &-item {
      height: 100%;
      display: flex;
      align-items: center;
    }
    &-label {
      @include table-header;
      text-transform: uppercase;
      color: $secondary-slate;
      padding-bottom: 4px;
      @include tablet {
        background-color: $background-lightgrey;
        padding: 1rem 0;

        &--first {
          margin-left: -24px;
          padding-left: 24px;
        }

        &--last {
          margin-right: -24px;
          padding-right: 33px;
        }
      }
    }
    &--actions {
      grid-column: span 2;
      @include tablet {
        grid-column: auto;
      }
    }
    &--actions &-label {
      display: none;
      @include tablet {
        display: block;
        text-align: right;
      }
    }
  }
  &__actions {
    display: flex;
    width: stretch;
    justify-content: space-between;
    @include tablet {
      gap: 12px;
    }
  }
}

